# AutoExCali

./: .gitignore  README.md
20210125_IRLS_ICP/: demo_test.m  f_irls_icp.m
20210125_IRLS_ICP/kernel/: f_kernelL1.m  f_kernelL2.m  f_kernelWelsch.m
CamLiDAR/: AutoCaliCamLiDAR.m
DualCam/: AutoCaliDualCam.m  lee_cali.m
DualLiDAR/: AutoCaliDualLiDAR.m
solver/: GlobalSearchOptm.m  corner_optm.m  f_optmAll.m  plane_error_minimize.m  unitray_optm.m
tools/: pt_project_depth2image.m  untitled.m
tools/board_extraction/: boardpts_ext.m  bor_icp.m  borcorner_ext.m  imgbor_ext.m
tools/noise_generator/: add_noise.m  f_bor_edge_ext2.m
vel2cam_simu/src/checkerboard_ctrl/: CMakeLists.txt  package.xml
vel2cam_simu/src/checkerboard_ctrl/src/: checkerbor_ctrl.cc  checkerbor_ctrl.h
vel2cam_simu/src/vel2cam_simu/: CMakeLists.txt  package.xml
vel2cam_simu/src/vel2cam_simu/launch/: camera-camera.launch  camera-vlp16.launch  vel16-vlp16.launch
vel2cam_simu/src/vel2cam_simu/rviz/: vel-cam.rviz
vel2cam_simu/src/vel2cam_simu/world/: camera-camera.world  camera-vlp16.world  checker.world  vlp16-vlp16.world
